# Nutrition-ai-agent

./: .env.example  .gitignore  NutriPlan_AI_PRD.md  README.md  indian_packaged_foods_knowledge_base.json  pyproject.toml
data/sample/: demo_pantry.json  demo_profile.json
data/synthetic/: database_manifest.json  feedback.json  meal_plan.json  packaged_foods_synthetic.json  pantry_items.json  profiles.json  recipes.json  shopping_list.json
data/synthetic/txt/: knowledge_corpus.txt  pantry_corpus.txt  recipes_corpus.txt
docs/: README.md
docs/api/: api-reference.md  openapi.json
docs/architecture/: system-architecture.md
docs/guides/: developer-guide.md  user-guide.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/chat/: page.tsx
frontend/app/feedback/: page.tsx
frontend/app/how-it-works/: page.tsx
frontend/app/pantry/: page.tsx
frontend/app/planner/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/recipes/: page.tsx
frontend/app/shopping/: page.tsx
frontend/components/: AgentPill.tsx  AppShell.tsx  Disclaimer.tsx  MedicalBanner.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  types.ts
scripts/: generate_openapi.py  load_database.py
src/nutriplan/: __init__.py  config.py  main.py
src/nutriplan/agents/: __init__.py  graph.py  nodes.py  state.py
src/nutriplan/api/: __init__.py  dependencies.py  main.py
src/nutriplan/db/: __init__.py  repository.py  schema.sql
src/nutriplan/llm/: chat.py  (+3 more)
tests/: test_kb.py  test_ollama.py  test_safety.py
(+31 files in other folders)
