[project]
name = "nutriplan"
version = "1.0.0"
description = "Agentic meal planning for Indian households — NutriPlan AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=0.3",
    "litellm>=1.50",
    "pydantic>=2.0",
    "rapidfuzz>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
nutriplan = "nutriplan.main:main"
nutriplan-api = "nutriplan.api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nutriplan"]

[tool.pytest.ini_options]
testpaths = ["tests"]